--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -292,6 +292,10 @@ body:hover .visually-hidden button {
     color: $youtube-color;
   }
 
+  .fa-reddit {
+    color: #ff4500;
+  }
+
   .fa-xing,
   .fa-xing-square {
     color: $xing-color;
