--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,7 +9,8 @@
   {% endfor %}
 {% else %}
   <script src="{{ '/assets/js/main.min.js' | relative_url }}"></script>
-  <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
+  <script src="{{ '/assets/js/fa-v5.0.13/fontawesome-all.min.js' | relative_url }}"></script>
+
 {% endif %}
 
 {% if site.search == true or page.layout == "search" %}
