--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -87,7 +87,9 @@ $google-plus-color: #dd4b39 !default;
 $instagram-color: #517fa4 !default;
 $lastfm-color: #d51007 !default;
 $linkedin-color: #007bb6 !default;
+$microblog-color: #fd9927 !default;
 $pinterest-color: #cb2027 !default;
+$reddit-color: #ff5700 !default;
 $rss-color: #fa9b39 !default;
 $soundcloud-color: #ff3300 !default;
 $stackoverflow-color: #fe7a15 !default;
