--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -8,14 +8,14 @@
       {% if author.avatar contains "://" %}
         {% assign author_src = author.avatar %}
       {% else %}
-        {% assign author_src = author.avatar | absolute_url %}
+        {% assign author_src = author.avatar | relative_url %}
       {% endif %}
 
       {% if author.home %}
         {% if author.home contains "://" %}
           {% assign author_link = author.home %}
         {% else %}
-          {% assign author_link = author.home | absolute_url %}
+          {% assign author_link = author.home | relative_url %}
         {% endif %}
         <a href="{{ author_link }}">
           <img src="{{ author_src }}" alt="{{ author.name }}" itemprop="image">
@@ -75,7 +75,7 @@
 
       {% if author.twitter %}
         <li>
-          <a href="https://twitter.com/{{ author.twitter }}" itemprop="sameAs" rel="nofollow noopener" target="_blank">
+          <a href="https://twitter.com/{{ author.twitter }}" itemprop="sameAs">
             <i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter
           </a>
         </li>
@@ -83,7 +83,7 @@
 
       {% if author.facebook %}
         <li>
-          <a href="https://www.facebook.com/{{ author.facebook }}" itemprop="sameAs" itemprop="sameAs" rel="nofollow noopener" target="_blank">
+          <a href="https://www.facebook.com/{{ author.facebook }}" itemprop="sameAs">
             <i class="fab fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook
           </a>
         </li>
@@ -99,7 +99,7 @@
 
       {% if author.linkedin %}
         <li>
-          <a href="https://www.linkedin.com/in/{{ author.linkedin }}" itemprop="sameAs" itemprop="sameAs" rel="nofollow noopener" target="_blank">
+          <a href="https://www.linkedin.com/in/{{ author.linkedin }}" itemprop="sameAs">
             <i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn
           </a>
         </li>
@@ -113,17 +113,9 @@
         </li>
       {% endif %}
 
-      {% if author.medium %}
-        <li>
-          <a href="https://www.medium.com/@{{ author.medium }}" itemprop="sameAs" itemprop="sameAs" rel="nofollow noopener" target="_blank">
-            <i class="fab fa-fw fa-medium" aria-hidden="true"></i> Medium
-          </a>
-        </li>
-      {% endif %}
-
       {% if author.instagram %}
         <li>
-          <a href="https://instagram.com/{{ author.instagram }}" itemprop="sameAs" itemprop="sameAs" rel="nofollow noopener" target="_blank">
+          <a href="https://instagram.com/{{ author.instagram }}" itemprop="sameAs">
             <i class="fab fa-fw fa-instagram" aria-hidden="true"></i> Instagram
           </a>
         </li>
@@ -147,7 +139,7 @@
 
       {% if author.github %}
         <li>
-          <a href="https://github.com/{{ author.github }}" itemprop="sameAs" itemprop="sameAs" rel="nofollow noopener" target="_blank">
+          <a href="https://github.com/{{ author.github }}" itemprop="sameAs">
             <i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub
           </a>
         </li>
@@ -163,7 +155,7 @@
 
       {% if author.stackoverflow %}
         <li>
-          <a href="https://www.stackoverflow.com/users/{{ author.stackoverflow }}" itemprop="sameAs" itemprop="sameAs" rel="nofollow noopener" target="_blank">
+          <a href="https://www.stackoverflow.com/users/{{ author.stackoverflow }}" itemprop="sameAs">
             <i class="fab fa-fw fa-stack-overflow" aria-hidden="true"></i> Stack Overflow
           </a>
         </li>
@@ -179,7 +171,7 @@
 
       {% if author.dribbble %}
         <li>
-          <a href="https://dribbble.com/{{ author.dribbble }}" itemprop="sameAs" itemprop="sameAs" rel="nofollow noopener" target="_blank">
+          <a href="https://dribbble.com/{{ author.dribbble }}" itemprop="sameAs">
             <i class="fab fa-fw fa-dribbble" aria-hidden="true"></i> Dribbble
           </a>
         </li>
@@ -212,13 +204,13 @@
       {% if author.youtube %}
         {% if author.youtube contains "://" %}
           <li>
-            <a href="{{ author.youtube }}" itemprop="sameAs" itemprop="sameAs" rel="nofollow noopener" target="_blank">
+            <a href="{{ author.youtube }}" itemprop="sameAs">
               <i class="fab fa-fw fa-youtube" aria-hidden="true"></i> YouTube
             </a>
           </li>
         {% else author.youtube %}
           <li>
-            <a href="https://www.youtube.com/user/{{ author.youtube }}" itemprop="sameAs" rel="nofollow noopener" target="_blank">
+            <a href="https://www.youtube.com/user/{{ author.youtube }}" itemprop="sameAs">
               <i class="fab fa-fw fa-youtube" aria-hidden="true"></i> YouTube
             </a>
           </li>
@@ -261,14 +253,6 @@
         <li>
           <a href="https://vine.co/u/{{ author.vine }}" itemprop="sameAs">
             <i class="fab fa-fw fa-vine" aria-hidden="true"></i> Vine
-          </a>
-        </li>
-      {% endif %}
-
-      {% if author.newsletter %}
-        <li>
-          <a href="https://upscri.be/{{ author.newsletter }}" itemprop="sameAs" rel="nofollow noopener" target="_blank">
-            <i class="far fa-newspaper" aria-hidden="true"></i> Newsletter
           </a>
         </li>
       {% endif %}
