--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -19,11 +19,8 @@ layout: default
 
   <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
-      <h1 class="page__title">{{ page.title }}</h1>
+      <h1 id="page-title" class="page__title">{{ page.title }}</h1>
     {% endunless %}
     {{ content }}
   </div>
-
-  <iframe style="height:250px;width:100%;max-width:800px;margin:0px auto;" src="https://upscri.be/4ea406?as_embed" frameborder="0"></iframe>
-
 </div>
