--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -203,7 +203,7 @@
     border: 0;
     outline: none;
     color: #fff;
-    background-color: transparent;
+    background-color: $primary-color;
     cursor: pointer;
   }
 
@@ -525,12 +525,6 @@
 
     &:hover {
       color: $text-color;
-    }
-  }
-
-  > li:last-child {
-    a {
-      border-bottom: none;
     }
   }
 
