--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -74,6 +74,14 @@
     margin-right: -1 * $right-sidebar-width-narrow;
     padding-left: 1em;
     z-index: 10;
+
+    &.sticky {
+      @include clearfix();
+      position: -webkit-sticky;
+      position: sticky;
+      top: 2em;
+      float: right;
+    }
   }
 
   @include breakpoint($x-large) {
@@ -115,8 +123,8 @@
     border-radius: 50%;
 
     @include breakpoint($large) {
-      padding: 3px;
-      border: 0.5px solid $border-color;
+      padding: 5px;
+      border: 1px solid $border-color;
     }
   }
 }
@@ -279,6 +287,7 @@
 
 .wide .sidebar__right {
   margin-bottom: 1em;
+
   @include breakpoint($large) {
     position: initial;
     top: initial;
@@ -287,6 +296,10 @@
     margin-right: initial;
     padding-left: initial;
     z-index: initial;
+
+    &.sticky {
+      float: none;
+    }
   }
 
   @include breakpoint($x-large) {
@@ -294,3 +307,4 @@
     margin-right: initial;
   }
 }
+
