Link fix in about Default link color and background color changed

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,7 @@ $global-font-family : $serif;
 $header-font-family : $sans-serif-narrow;
 $sans-serif         : $sans-serif-narrow;
 
-$link-color: #a267cc;
+$link-color: #496cb8;
 
 a {
   text-decoration: underline;
@@ -17,7 +17,7 @@ a {
 
 /* extra style and color vars */
 
-$inc-base-color: #a267cc;
+$inc-base-color: #12ce50;
 $inc-border-color: #000;
 $inc-border-radius: 10px;
 $inc-shadow: 0 0.33em 1em rgba($inc-base-color, 0.33);
